<resources>
    <string name="app_name">Pese hampaat Matti Majavan kanssa</string>
    <string name="choose_profile">Valitse käyttäjä</string>
    <string name="new_profile">Uusi käyttäjä</string>
    <string name="name_text">Kuka olet?</string>
    <string name="age_text">Ikä</string>
    <string name="cancel_text">Peruuta</string>
    <string name="save_text">Tallenna</string>
    <string name="snackbar_new_profile_created">Uusi käyttäjä luotu!</string>
    <string name="delete_profile">Poista käyttäjä</string>
    <string name="delete_profile_text">Kirjoita poistettavan käyttäjän nimi</string>
    <string name="delete_button_text">Poista</string>
    <string name="aloitapesu">PESE HAMPAAT</string>
    <string name="user">käyttäjä</string>
    <string name="tipView">tip</string>
    <string name="pesukerrat">Olet pessyt hampaita: 0 kertaa</string>
    <string name="settings_text">Asetukset</string>
    <string name="song">Valitse soitettava kappale</string>
    <string name="pesukerrat_sekuneissa">Mikä tekee yhteensä 0 sekuntia!</string>
    <string name="start_brushing_teeth">Pestään!</string>
    <string name="tooth_brushing_done">Olen valmis!</string>
    <string name="return_to_main_menu">Palaa päävalikkoon</string>
    <string name="reset_stats_text">Nollaa harjaustilastot</string>
    <string name="reset_stats_warning">Haluatko varmasti nollata harjaustilastosi?</string>
    <string name="yes_text">Kyllä</string>
    <string name="no_button">En</string>
    <string name="BrushReset">Uusi Harja</string>
</resources>